fixed issue jumping immediately to the next question instead of to the answer added pictures that correlate with the answer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,28 @@
 body {
     background-image: url('../images/background.jpg');
-    color: white;
+    background-size: 100%;
+    color: #00FFFF;
     text-align: center;
     font-size: 24px;
 }
 
 .gameScreen {
-    width: 60vw;
+    width: 960px;
     margin: 0 auto;
-    background-color: #ffffff;
-    border: 1px solid #dddddd;
     margin-bottom: 100px;
     padding: 20px;
     margin-top: 50px;
     background-image: url(../images/background2.jpg);
     background-size: 100%;
     border: none;
-    height: 75vh;
-    background-repeat: no-repeat;
+    /* change this to a set amount not based on vh same with width */
+    height: 500px;
+    background-repeat: no-repeat; 
 } 
+
+#question {
+    margin-top: 10px;
+}
 
 h1 {
     font-size: 50px;
@@ -29,9 +33,18 @@ h1 {
 #start {
     margin: 0 auto;
     display: block;
-    width: 100px;
+    width: 140px;
 }
 
-#time {
-    color: white;
+#restart {
+    margin: 0 auto;
+    display: block;
+    width: 140px;
+    display: none;
+}
+#image {
+    width: 300px;
+    height: 300px;
+    border: none;
+    display: none;
 }
